tests/errors/string_builder_push_byte_invalid_panics.ptt
use std/string_builder

spark {
  b is StringBuilder()
  b.push_byte(300)
}
